<resources>
    <string name="app_name">Pinoy Klasiks</string>
    <string name="title">Pinoy Klasiks</string>
    <string name="subTitle">Small place with big taste</string>
    <string name="tmenu_about">About</string>
    <string name="tmenu_settings">Settings</string>
    <string name="tmenu_searchable">I am looking for...</string>
    <string name="search_result_subtitle">Results for : </string>

    <!-- FOR HAMBURGER MENU-->
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="Cart">Cart</string>
    <string name="cartTitle">  Your cart</string>
    <string name="main_menu">Main menu</string>
    <string name="orders_history">Orders history</string>

    <!-- Dialog confirm for clean cart -->
    <string name="dialog_confirm_title">Confirmation</string>
    <string name="dialog_confirm_message">Are you sure you want to clean the cart?</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>


    <string name="nav_menu_call_us">Call us</string>
    <string name="nav_menu_share">Share</string>
    <string name="nav_menu_about_us">About us</string>
    <string name="nav_menu_location">Location</string>
    <string name="nav_menu_orders_history">Orders history</string>
    <string name="nav_menu_cart">Your cart</string>
    <string name="nav_menu_main_menu">Main menu</string>

    <string name="suborderTypeOrderTitle">Choose type of order</string>

    <string name="co_name_hint">Enter your name...</string>
    <string name="co_phone_number_hint">Enter your phone number..."</string>
    <string name="co_address_hint">Enter address of your order:</string>
    <string name="coAmountPersonLbl">Amount of person:</string>
    <string name="co_email_hint">Enter your email...</string>
    <string name="co_location_hint">Enter your exact address...</string>
    <string name="co_datetime_lbl">Choose date and time:</string>
    <string name="co_comment_hint">Comments to the order...</string>
    <string name="tmenu_co_clear">Clear</string>
    <string name="co_form_message_req_field">Please please fill required field...</string>
    <string name="title_activity_location">LocationActivity</string>
    <string name="title_activity_maps">Map</string>
    <string name="co_title_dialog_msg">Thank you!</string>
    <string name="co_msg_dialog_msg">Your order has been already sent! Our manager will contact you soon to approve the order. Thank you!</string>
    <string name="co_ok_btn_dialog_msg">Ok</string>
    <string name="co_sms_dialog_title">Send order via SMS</string>
    <string name="co_sms_dialog_msg">You have no internet connection to send the order! Would you like to send it via SMS?</string>
    <string name="co_sms_dialog_no">No</string>
    <string name="co_sms_dialog_yes">Yes</string>
    <string name="oh_date_of_order_lbl">Date of order:</string>

    <string name="co_sms_phone_dialog_title">Question</string>
    <string name="co_sms_phone_dialog_msg">Sorry, due to problem with server we could not register you order. Would you like to make an order via SMS or Call?</string>
    <string name="co_sms_phone_dialog_call">CALL</string>
    <string name="co_sms_phone_dialog_sms">SMS</string>
    <string name="co_sms_phone_dialog_later">TRY LATER</string>
    <string name="nav_header_temp_lbl">temp:</string>

    <string name="nav_header_city_lbl">Auckland</string>
    <string name="sub_act_history_toolbar_title">Orders History</string>
    <string name="title_activity_about_us">AboutUsActivity</string>
    <string name="about_us_restaurant_name">Restaurant Pinoy Klasiks</string>
    <string name="about_us_address">Address: #8 Pilkington, Panmure</string>
    <string name="about_us_email">Email: info@pinoy-klasiks.nz</string>
    <string name="about_us_phone_number">Phone: 0211769217</string>
    <string name="tvCompanyDev"><![CDATA[ Developed by M&M Software Development @2016]]></string>
    <string name="co_valform_required">This field is required!</string>
    <string name="co_valform_legth_limit_cust_name">The customer name should be no more than 25 symbols!</string>
    <string name="co_valform_legth_limit_phone">The phone should be no more than 10 symbols!</string>
    <string name="co_valform_check_email">Please check your email.</string>


</resources>
