<?xml version="1.0" encoding="utf-8"?>

<!--
/**
 * Title       : activity_complete_order
 * Purpose     : The form to finish the order
 * Date        : 15.10.2016
 * Input       : EditTexts for customer name, phone number,
                 email, date, time, comment.
 * Proccessing : Send the order
 *
 * Output      : Activity
 *
 * @author Mikhail PASTUSHKOV
 * @author Melchor RELATADO
 */

-->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true">
    android:focusableInTouchMode="true">

    <!-- Toolbar in the Activity -->
    <include layout="@layout/toolbar"
            android:id="@+id/toolbar_complete_order"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

    <!-- Customer name -->
    <EditText
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/etCoCustomerName"
        android:hint="@string/co_name_hint"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_width="match_parent"
        android:drawableLeft="@drawable/ic_name" />

     <!-- Phone number -->
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/etCoPhoneNumber"
        android:hint="@string/co_phone_number_hint"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/etCoCustomerName"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        app:layout_constraintHorizontal_bias="0.0"
        android:drawableLeft="@drawable/ic_phone" />

            <!-- Email -->
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/etCoEmail"
                android:hint="@string/co_email_hint"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:drawableLeft="@drawable/ic_email" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <!-- Label for Date and Time -->
                <TextView
                    android:layout_height="wrap_content"
                    android:id="@+id/tvDateTimeLbl"
                    android:text="@string/co_datetime_lbl"
                    android:textAlignment="center"
                    android:clickable="false"
                    android:gravity="center"
                    android:layout_marginBottom="35dp"
                    android:layout_width="80dp" />

                <!-- Date and Time -->
                <EditText
                    android:inputType="time"
                    android:ems="10"
                    android:id="@+id/etCoDate"
                    android:hint="Date"
                    android:layout_weight="0.30"
                    android:layout_height="50dp"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:drawableLeft="@drawable/ic_date"
                    android:layout_width="90dp" />

                <EditText
                    android:inputType="time"
                    android:ems="10"
                    android:id="@+id/etCoTime"
                    android:hint="Time"
                    android:layout_height="50dp"
                    android:layout_weight="0.30"
                    android:paddingLeft="10dp"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:layout_width="65dp"
                    android:drawableLeft="@drawable/ic_time" />
                />
            </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="match_parent" >
                <!-- Lable for Amount of person -->
                <TextView
                    android:layout_height="match_parent"
                    android:id="@+id/tvcoAmountPersonLbl"
                    android:text="@string/coAmountPersonLbl"
                    android:textSize="18sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etCoEmail"
                    app:layout_constraintRight_toLeftOf="@+id/btnCoMinus"
                    app:layout_constraintHorizontal_bias="0.75"
                    android:layout_width="wrap_content"
                    android:drawableLeft="@drawable/ic_amount_person"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="16dp" />

                <!-- The button to decrease quantity of persons -->
                <ImageButton
                    android:src="@drawable/minus"
                    android:id="@+id/btnCoMinus"
                    android:scaleType="fitCenter"
                    android:layout_height="30dp"
                    android:background="@null"
                    android:layout_marginTop="15dp"
                    app:layout_constraintTop_toBottomOf="@+id/etCoEmail"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:cropToPadding="true"
                    android:layout_width="30dp" />

                <!-- number of persons -->
                <TextView
                    android:text="1"
                    android:layout_height="match_parent"
                    android:id="@+id/tvCoQuantityPerson"
                    android:textSize="18sp"
                    android:textAlignment="center"
                    android:gravity="center_vertical|center_horizontal"
                    android:textStyle="normal|bold"
                    android:layout_weight="1"
                    android:layout_marginTop="15dp"
                    android:layout_width="50dp" />

                <!-- The button to increase quantity of persons -->
                <ImageButton
                    android:src="@drawable/plus"
                    android:background="@null"
                    android:scaleType="fitStart"
                    android:layout_height="30dp"
                    app:layout_constraintTop_toBottomOf="@+id/etCoEmail"
                    app:layout_constraintRight_toLeftOf="@+id/tvCoQuantityPerson"
                    android:layout_weight="1"
                    android:layout_width="30dp"
                    android:maxWidth="30dp"
                    android:maxHeight="30dp"
                    android:layout_marginTop="15dp"
                    android:id="@+id/btnCoPlus" />

            </TableRow>

        </TableLayout>

    </LinearLayout>


            <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
                android:id="@+id/llAddress"
                android:visibility="invisible">

                <!-- Addres of the person -->
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvCoAddressLbl"
                android:text="@string/co_address_hint"
            android:layout_weight="0.15" />

                <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/spSuburb"
                    android:layout_weight="0.21" />

                <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spCoDistrict"
            android:layout_weight="0.09" />

                <EditText
                        android:layout_width="match_parent"
                    android:inputType="textPersonName"
                        android:ems="10"
                        android:id="@+id/etCoAddress"
                        android:hint="@string/co_location_hint"
                    android:layout_weight="0.15"
                    android:drawableLeft="@drawable/ic_email"
                    android:layout_height="30dp" />

            </LinearLayout>

     <!-- comment to the order -->
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/etCoComment"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:hint="@string/co_comment_hint"
        android:layout_weight="0.01"
        android:layout_marginBottom="10dp"
        android:hapticFeedbackEnabled="true"
        android:gravity="bottom|center_vertical"
        android:drawableLeft="@drawable/ic_comment" />


     <!-- button that send the order -->
    <Button
        android:text="Place Order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:id="@+id/btnCoPlaceOrder"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:background="@drawable/button_checkout" />



        </LinearLayout>
    </ScrollView>
</LinearLayout>
